[gd_scene load_steps=3 format=3 uid="uid://cjr2m8xkl1qp7"]

[ext_resource type="Script" path="res://scripts/ui/CardUI.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.12, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.5, 1)
corner_radius_left_top = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(120, 170)
layout_mode = 2
script = ExtResource("1_card")

[node name="CardBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="CardBackground/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CostBG" type="Panel" parent="CardBackground/VBox/Header"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="CostLabel" type="Label" parent="CardBackground/VBox/Header/CostBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="CardBackground/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Card Name"
text_overrun_behavior = 3
horizontal_alignment = 1

[node name="TierLabel" type="Label" parent="CardBackground/VBox/Header"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = ""
horizontal_alignment = 2

[node name="TypeIcon" type="Label" parent="CardBackground/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "⚔️"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="CardBackground/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "Card description text here."
fit_content = true
scroll_active = false

[node name="TagsLabel" type="Label" parent="CardBackground/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
theme_override_font_sizes/font_size = 10
text = "Gun"
horizontal_alignment = 1

[node name="ClickArea" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
